détailler le cours

--- a/index.html
+++ b/index.html
@@ -5,5 +5,14 @@
 </head>
 <body>
 <h1> Cours de systèmes distribués </h1>
+
+<ul>
+	<li>Introduction à GIT</li>
+	<li>Design pattern MVC et DAO</li>
+	<li>Apache Maven (gestion de dépendances)</li>
+	<li>Services Web SOAP</li>
+	<li>Services Web Rest</li>
+
+</ul>
 </body>
 </html>
